[package]
name = "testing-rust-sdl"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
sdl2 = { version = "0.34.5", default-features = false, features = ["raw-window-handle"] }
wgpu = { version = "0.8", default-features = false }
futures = { version = "0.3.15" }

[[bin]]
name = "test_wgpu_sdl"
path = "src/main.rs"

# Explicitly specify what our profiles use.
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = "off"
debug-assertions = false
codegen-units = 8
panic = "abort"
incremental = false
#
[profile.release]
opt-level = 0
debug = true
rpath = false
lto = "off"
debug-assertions = false
panic = "abort"
incremental = false