[package]
name = "testing-rust-sdl"
version = "0.1.0"
authors = [""]
edition = "2018"
resolver = "2"

[dependencies]
sdl2 = { version = "0.34.5", default-features = false, features = ["raw-window-handle"] }
#wgpu-hal = { version = "0.10.4", features = ["vulkan"]}
wgpu = { version = "0.10.1" , default-features = false} 
#, default-features = false }
pollster = { version = "0.2.4", default-features = false }
#futures = { version = "0.3.17", default-features = false, features = ["executor"] }

[[bin]]
name = "test_wgpu_sdl"
path = "src/main.rs"

# Explicitly specify what our profiles use.
#[profile.dev]
#opt-level = 0
#debug = true
#rpath = false
#lto = "off"
#debug-assertions = false
#codegen-units = 8
#panic = "abort"
#incremental = false
##
#[profile.release]
#opt-level = 0
#debug = true
#rpath = false
#lto = "off"
#debug-assertions = false
#panic = "abort"
#incremental = false